import { describe } from "vitest";

import { runTests } from "./utils";

describe("block-component", () => {
	runTests({
		"empty": "::component\n::",
		"text": "::component\ntext\n::",
		"paragraphWithComponents": [
			"::test",
			'Hello world :this is a **test**, with _different_ **styles** and a [link](https://nuxtjs.org){target="_blank"}',
			"::",
		].join("\n"),
		"empty-slot": "::component\n#text\n::",
		"component-attributes": '::component{key="value"}\n::',
		"component-attributes-remove-duplicate":
			'::component{key="value" key="value"}\n::',
		"component-attributes-length-80":
			`::component{a="${Array.from({ length: 80 - 17 + 1 }).join("a")}"}\n::`,
		"component-attributes-length-81":
			`::component{a="${Array.from({ length: 81 - 17 + 1 }).join("a")}"}\n::`,
		"frontmatter":
			"::with-frontmatter\n---\nkey: value\narray:\n  - item\n  - itemKey: value\n---\n::",
		"jsonScapeAttr": '::foo{:test=\'{"foo":"I\\\'d love to"}\'}\n::',
		"frontmatter1": [
			"::with-frontmatter",
			"---",
			"key: value",
			"key2:",
			"  subkey: value",
			"  subkey2: value",
			"array:",
			"  - item",
			"  - itemKey: value",
			"---",
			"::",
		].join("\n"),
		"frontmatter-with-binding-variables": [
			"::with-frontmatter",
			"---",
			":key: value",
			"array:",
			"  - item",
			"  - :itemKey: value",
			"object:",
			"  :subkey: value",
			"  subkey2: value",
			"---",
			"::",
		].join("\n"),
		"nested-component": [
			"::with-frontmatter-and-nested-component",
			"---",
			"key: value",
			"array:",
			"  - item",
			"  - itemKey: value",
			"---",
			"Default slot",
			"",
			"#secondary-slot",
			"Secondary slot value",
			"",
			"  :::hello",
			"  ---",
			"  key: value",
			"  ---",
			"  :::",
			"::",
		].join("\n"),
		"section-order": [
			"::comp",
			"#title",
			"Hello",
			"#another-title",
			"World",
			"#default",
			"P1",
			"",
			"P2",
			"",
			"P",
			"::",
		].join("\n"),
		"section-order-2": [
			"::comp",
			"#a",
			"A",
			"#c",
			"C",
			"#b",
			"B",
			"#default",
			"P1",
			"::",
		].join("\n"),
		"ignore-code-fence": [
			"::component",
			"First line",
			"",
			"```cpp",
			"#include <iostream>",
			"```",
			"",
			"Second line",
			"::",
			"",
			"Third line",
		].join("\n"),
		"dangling-list": [
			"::component",
			"- list item",
			"- list item",
			"",
			"#slot",
			"slot content",
			"::",
		].join("\n"),
		"trim-slot-name": ["::component", "#slot ", "slot content", "::"].join(
			"\n",
		),
		"sugar-syntax": ":component",
		"component-attributes-bind-frontmatter": '::text-component{:key="value"}\n::',
		"component-attributes-array-of-string":
			'::container-component{:items=\'["Nuxt", "Vue"]\'}\n::',
		"component-attributes-bad-array":
			'::container-component{:items="[Nuxt,Vue]"}\n::',
		"component-attributes-array-of-number":
			"::container-component{:items='[1,2,3.5]'}\n::",
		"component-attributes-array-convert-double-quote":
			'::container-component{:items="[1,2,3.5]"}\n::',
		"component-attributes-object":
			'::container-component{:items=\'{"key": "value"}\'}\n::',
		"component-hProperties-be-the-same": [
			'::container-component{:items=\'{"key":"value"}\'}\n::',
			"",
			"::container-component",
			"---",
			"items:",
			"  key: value",
			"---",
			"::",
		].join("\n"),
		"slot-attributes": [
			"::container-component",
			'#slot{key="value"}',
			"slot content",
			"::",
		].join("\n"),
		"default-slot-attributes": [
			"::container-component",
			'#default{key="value"}',
			"slot content",
			"::",
		].join("\n"),
		"nested-empty-line": [
			'::container{padding="0px"}',
			"  :::container",
			"  ---",
			"  styles: |",
			"    pre {",
			"      border: 1px solid red !important;",
			"",
			"      span {",
			"        line-height: 1;",
			"      }",
			"    }",
			"  ---",
			"  This container has a code block.",
			"",
			"  ```js",
			"  function test() {",
			'    console.log("test");',
			"  }",
			"  ```",
			"  :::",
			"::",
		].join("\n"),
	});
});
